# googlesheets

./: CHANGELOG.md  Dockerfile  README.md  googlesheets.py  googlesheets.yaml  pyproject.toml
locale/el/: messages.po
locale/en/: messages.po
locale/templates/: messages.pot
tests/: test_fetch.py  test_migrate_params.py  test_render.py
